--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 333 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 336 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -37,6 +37,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Locksmith (Level 1)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 92 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 133 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 167 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -98,26 +99,26 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    844 --git-dir=.git
-    836 status
-    513 checkout
-    321 branch
-    293 difftool
-    254 commit
-    241 help
-    205 reset
-    205 add
-    185 rebase
-    179 push
-    148 clean
+    865 status
+    855 --git-dir=.git
+    523 checkout
+    328 branch
+    294 difftool
+    280 commit
+    245 help
+    209 reset
+    206 add
+    201 rebase
+    187 push
+    150 clean
     133 stash
-    116 diff
+    117 diff
     110 rev-parse
-     68 --git-dir=/home/stavros/git/otp/.git
+     78 --git-dir=/home/stavros/git/otp/.git
      62 log
-     55 mergetool
-     38 pull
-     37 remote
+     57 mergetool
+     39 pull
+     38 remote
      30 bisect
      26 tree
      24 cherry-pick
@@ -125,7 +126,7 @@ Git commands sorted by usage:
      15 merge
      10 rm
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      6 init
+      7 init
       5 blame
       4 gc
       3 config
