--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 336 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 343 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -63,6 +63,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -99,38 +100,38 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    865 status
-    855 --git-dir=.git
-    523 checkout
-    328 branch
-    294 difftool
-    280 commit
-    245 help
-    209 reset
-    206 add
-    201 rebase
-    187 push
-    150 clean
-    133 stash
-    117 diff
-    110 rev-parse
-     78 --git-dir=/home/stavros/git/otp/.git
-     62 log
+    925 status
+    880 --git-dir=.git
+    546 checkout
+    347 branch
+    301 difftool
+    300 commit
+    257 help
+    219 add
+    215 reset
+    210 rebase
+    207 push
+    158 clean
+    139 stash
+    124 diff
+    120 rev-parse
+    110 --git-dir=/home/stavros/git/otp/.git
+     63 log
      57 mergetool
-     39 pull
-     38 remote
+     44 pull
+     39 remote
      30 bisect
      26 tree
-     24 cherry-pick
+     25 cherry-pick
      19 show
      15 merge
-     10 rm
+     11 rm
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       7 init
       5 blame
       4 gc
+      4 clone
       3 config
-      3 clone
       2 tag
       2 mv
       2 ls-remote
@@ -138,6 +139,7 @@ Git commands sorted by usage:
       1 --version
       1 revert
       1 merge-base
+      1 grep
       1 --git-dir=
       1 fetch
       1 achievements
