--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 343 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 349 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -100,41 +101,41 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    925 status
-    880 --git-dir=.git
-    546 checkout
-    347 branch
-    301 difftool
-    300 commit
-    257 help
-    219 add
-    215 reset
-    210 rebase
-    207 push
-    158 clean
+    988 status
+    912 --git-dir=.git
+    564 checkout
+    384 branch
+    311 commit
+    306 difftool
+    264 help
+    231 add
+    226 rebase
+    221 reset
+    218 push
+    164 clean
     139 stash
+    126 --git-dir=/home/stavros/git/otp/.git
     124 diff
-    120 rev-parse
-    110 --git-dir=/home/stavros/git/otp/.git
+    122 rev-parse
+     63 mergetool
      63 log
-     57 mergetool
-     44 pull
+     46 pull
      39 remote
+     30 mv
      30 bisect
      26 tree
      25 cherry-pick
-     19 show
-     15 merge
-     11 rm
+     24 show
+     18 merge
+     15 rm
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       7 init
+      5 ls-remote
       5 blame
       4 gc
       4 clone
       3 config
       2 tag
-      2 mv
-      2 ls-remote
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       1 --version
       1 revert
