--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 358 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 363 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 272 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -102,39 +103,40 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1000 status
-    926 --git-dir=.git
-    573 checkout
-    385 branch
-    334 commit
-    306 difftool
-    266 help
-    259 rebase
-    250 add
-    225 reset
-    219 push
-    164 clean
-    139 stash
-    128 --git-dir=/home/stavros/git/otp/.git
-    126 rev-parse
-    124 diff
+   1045 status
+   1014 --git-dir=.git
+    608 checkout
+    414 branch
+    361 commit
+    325 difftool
+    289 rebase
+    285 help
+    266 add
+    247 reset
+    231 push
+    165 clean
+    160 rev-parse
+    144 stash
+    144 --git-dir=/home/stavros/git/otp/.git
+    132 diff
+     64 log
      63 mergetool
-     63 log
-     46 pull
+     48 pull
+     40 rm
      39 remote
-     33 rm
+     35 cherry-pick
+     33 show
      31 mv
      30 bisect
      26 tree
-     25 cherry-pick
-     24 show
-     18 merge
+     19 merge
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       7 init
+      7 --git-dir=
       5 ls-remote
+      5 clone
       5 blame
       4 gc
-      4 clone
       3 config
       2 tag
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
@@ -142,7 +144,6 @@ Git commands sorted by usage:
       1 revert
       1 merge-base
       1 grep
-      1 --git-dir=
       1 fetch
       1 achievements
 </pre>
