--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 369 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 378 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -83,6 +83,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 272 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -104,35 +105,35 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1047 status
-   1015 --git-dir=.git
-    609 checkout
-    414 branch
-    366 commit
-    325 difftool
-    289 rebase
-    286 help
-    268 add
-    249 reset
-    231 push
-    165 clean
-    160 rev-parse
-    144 stash
-    144 --git-dir=/home/stavros/git/otp/.git
-    133 diff
-     64 log
-     63 mergetool
-     48 pull
-     40 rm
-     39 remote
+   1148 status
+   1115 --git-dir=.git
+    657 checkout
+    444 branch
+    387 commit
+    337 difftool
+    325 rebase
+    303 help
+    290 add
+    256 reset
+    254 push
+    171 rev-parse
+    166 clean
+    154 --git-dir=/home/stavros/git/otp/.git
+    147 stash
+    142 diff
+     70 mergetool
+     70 log
+     54 pull
+     44 rm
+     42 show
+     40 remote
+     37 bisect
      35 cherry-pick
-     33 show
-     32 bisect
-     31 mv
-     26 tree
-     19 merge
+     34 mv
+     27 tree
+     23 merge
+      8 init
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      7 init
       7 --git-dir=
       5 ls-remote
       5 clone
