--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 389 points<br>
+Unlocked 29/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 390 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -104,32 +104,33 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Thug (Level 4)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Thug (Level 5)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1223 status
-   1168 --git-dir=.git
-    668 checkout
-    468 branch
-    430 commit
+   1227 status
+   1184 --git-dir=.git
+    672 checkout
+    473 branch
+    434 commit
     353 difftool
     331 rebase
-    324 help
-    324 add
-    299 push
-    260 reset
-    183 rev-parse
+    326 help
+    326 add
+    302 push
+    261 reset
+    191 rev-parse
     166 clean
     155 --git-dir=/home/stavros/git/otp/.git
     148 stash
-    144 diff
-     87 pull
-     79 log
+    145 diff
+     88 pull
+     80 log
      74 mergetool
-     56 show
+     57 show
+     48 tree
      47 rm
-     46 remote
-     40 tree
+     47 remote
      37 cherry-pick
      37 bisect
      34 mv
@@ -138,7 +139,7 @@ Git commands sorted by usage:
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       8 clone
       7 --git-dir=
-      6 gc
+      7 gc
       5 ls-remote
       5 blame
       4 tag
@@ -146,6 +147,7 @@ Git commands sorted by usage:
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       1 --version
       1 revert
+      1 reflog
       1 merge-base
       1 grep
       1 fsck
@@ -182,7 +184,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
-<li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 <li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
