--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 392 points<br>
+Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 396 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -109,37 +110,37 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1252 status
-   1208 --git-dir=.git
-    679 checkout
-    484 branch
-    449 commit
-    357 difftool
-    335 add
-    333 help
-    332 rebase
-    312 push
-    261 reset
-    198 rev-parse
-    166 clean
-    159 --git-dir=/home/stavros/git/otp/.git
-    151 diff
+   1288 status
+   1228 --git-dir=.git
+    687 checkout
+    492 branch
+    469 commit
+    358 difftool
+    347 add
+    340 help
+    336 rebase
+    332 push
+    262 reset
+    206 rev-parse
+    176 clean
+    166 --git-dir=/home/stavros/git/otp/.git
+    158 diff
     148 stash
-     95 pull
-     82 log
+     99 pull
+     83 log
      74 mergetool
-     59 show
+     64 show
+     51 remote
      50 tree
-     49 remote
-     47 rm
-     37 cherry-pick
+     48 rm
+     38 cherry-pick
      37 bisect
      34 mv
      25 merge
+     12 clone
      11 init
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      8 clone
-      7 --git-dir=
+      8 --git-dir=
       7 gc
       7 blame
       5 ls-remote
